Add full test with 90 generated samples